네트워크: 브라우저 렌더링 내용 추가

--- a/네트워크/브라우저 렌더링.md
+++ b/네트워크/브라우저 렌더링.md
@@ -15,3 +15,17 @@
 7. HTML 파서는 파싱을 하다가 Script 태그를 만나면 JavaScript 코드를 실행하기 위해서 파싱을 중단한다.
 
 8. 제어 권한을 JavaScript 엔진에게 넘기고 JavaScript 코드 또는 파일을 로드해서 파싱하고 실행한다.
+
+## DOM
+
+**DOM(Document Object Model, 문서 객체 모델)**
+
+브라우저가 HTML 파일을 읽을 때 브라우저가 이해할 수 있고,
+
+메모리에 보관할 수 있는 Object로 변환시키면서 Tree 구조를 생성하는것이 DOM이다.
+
+## CSSOM
+
+**CSSOM(CSS Object Model, CSS 객체 모델)**
+
+브라우저가 HTML을 DOM으로 만들면서 개발자가 정의해놓은 CSS와 기본 적으로 설정되어있는 CSS를 cascading rule에 따라 병합하여 만드는 것이 CSSOM이다.
