--- a/네트워크/쿠키와 세션.md
+++ b/네트워크/쿠키와 세션.md
@@ -8,13 +8,13 @@
 
 정확히는 이름, 값, 만료 시간, 경로 등을 포함하고 있다.
 
-클라이언트의 상태 정보를 브랑줘에 저장하고 서버에 요청 할 때 쿠키를 넘겨준다.
+클라이언트의 상태 정보를 브라우저에 저장하고 서버에 요청 할 때 쿠키를 넘겨준다.
 
 ## Session
 
 일정 시간 동안 같은 브라우저로부터 들어오는 요청을 하나의 상태로 보고 그 상태를 유지하는 기술이다.
 
-웹 브러우저를 통해 서버에 접속한 이후부터 브라우저를 종료할 때 까지 유지되는 상태이다.
+웹 브라우저를 통해 서버에 접속한 이후부터 브라우저를 종료할 때 까지 유지되는 상태이다.
 
 ## 차이점
 
