--- a/JavaScript/클로저.md
+++ b/JavaScript/클로저.md
@@ -4,6 +4,8 @@
 
 자신을 포함하고 있는 외부 함수보다 내부 함수가 더 오래 유지되는 경우, 외부 함수밖에서 내부 함수가 호출되더라도 외부 함수의 지역 변수에 접근할 수 있는데 이러한 함수를 클로저라고 부른다.
 
+클로저란, 함수 안에 함수를 생성할 때 만들어 지고, 함수가 실행된 이후 스코프가 사라지지 않고 생성된 시점의 스코프 체인을 기억하고 있는 것
+
 ## 활용
 
 1. `클로저`는 외부 함수의 실행이 끝나더라도 외부 함수 내 변수를 사용 할 수 있어 데이터를 보존할 수 있다.
