--- a/JavaScript/클로저.md
+++ b/JavaScript/클로저.md
@@ -4,7 +4,12 @@
 
 자신을 포함하고 있는 외부 함수보다 내부 함수가 더 오래 유지되는 경우, 외부 함수밖에서 내부 함수가 호출되더라도 외부 함수의 지역 변수에 접근할 수 있는데 이러한 함수를 클로저라고 부른다.
 
-함수 안에 함수를 생성할 때 만들어 지고, 함수가 실행된 이후 스코프가 사라지지 않고 생성된 시점의 스코프 체인을 기억하고 있는 것
+`클로저`는 함수와 그 주변의 환경을 기억하는 기능
+
+함수안에 또 다른 함수가 있을 때 클로저의 기능을 사용할 수 있다.
+
+클로저는 함수 안에 또 다른 함수가 있고 내부 함수가 호출이 되더라도 그 주변의 환경을 기억하여 외부 함수의 지역변수에 접근 할 수 있는 함수를 말한다.
+
 
 ## 활용
 
