--- a/JavaScript/클로저.md
+++ b/JavaScript/클로저.md
@@ -8,7 +8,7 @@
 
 함수안에 또 다른 함수가 있을 때 클로저의 기능을 사용할 수 있다.
 
-클로저는 함수 안에 또 다른 함수가 있고 내부 함수가 외부 함수 밖에서 호출이 되더라도 그 주변의 환경을 기억하여 외부 함수의 지역변수에 접근 할 수 있는 함수를 말한다.
+클로저는 함수 안에 또 다른 함수가 있고 내부 함수가 외부 함수 밖에서 호출이 되더라도 내부 함수가 선언이 됐을 때의 주변의 환경을 기억하여 외부 함수의 지역변수에 접근 할 수 있는 함수를 말한다.
 
 
 ## 활용
